FIxed: overflow-x hidden problem

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,2 +1,10 @@
 @import "tailwindcss";
 
+*, *::before, *::after {
+    box-sizing: border-box;
+  }
+
+  html {
+    overflow-x: hidden;
+    width: 100%;
+  }
